[package]
name = "toy-engine"
version = "0.1.0"
authors = ["Jackson Egan <jackson@sneagan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
rust_decimal = "1.8.1"
itertools = "0.9.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
log = "0.4"
env_logger = "0.8.2"
rayon = "1.3.0"
csv = "1.1"
# CLI Argument Parsing and Error Representation
structopt = "0.3.21"
anyhow = "1.0.35"

[dev-dependencies]
# CLI Integration Testing
assert_cmd = "1.0.2"
predicates = "1.0.5"
